src/objects/VMT_Account_Score__c.object
<CustomObject>
    <fields>
        <fullName>B__c</fullName>
        <formula>VALUE( What_is_the_status_of_the_B_udget__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>B</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Can_champion_explain_why_we_re_U_nique__c</fullName>
        <label>Can champion explain why we&apos;re [U]nique?</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Close_Date__c</fullName>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Do_we_have_a_rock_solid_R_OI__c</fullName>
        <label>Do we have a rock-solid [R]OI?</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Execution_Date__c</fullName>
        <formula>DATEVALUE( Execution_Time__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Execution Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Execution_Time__c</fullName>
        <label>Execution Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Is_M_anagement_engaged__c</fullName>
        <label>Is [M]anagement engaged?</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>M__c</fullName>
        <formula>VALUE( Is_M_anagement_engaged__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>M</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>O__c</fullName>
        <formula>VALUE(Where_is_the_O_pposition__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>O</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <label>Opportunity Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner__c</fullName>
        <label>Opportunity Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Safe_ID__c</fullName>
        <label>Opportunity Safe ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Team_Group__c</fullName>
        <label>Owner Team (Group)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Team__c</fullName>
        <label>Owner Team</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>R__c</fullName>
        <formula>VALUE (Do_we_have_a_rock_solid_R_OI__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>R</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stage_at_Execution__c</fullName>
        <label>Stage at Execution</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T__c</fullName>
        <formula>VALUE( What_is_the_T_imeframe__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>T</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>U__c</fullName>
        <formula>VALUE( Can_champion_explain_why_we_re_U_nique__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>U</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VMT_Account_Score_Num__c</fullName>
        <formula>VALUE(VMT_Opportunity_Score__c)</formula>
        <label>VMT Account Score Num</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VMT_Opportunity_Score__c</fullName>
        <label>VMT Opportunity Score</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>V__c</fullName>
        <formula>value(What_is_the_V_olume_of_groups_touched__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>V</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>What_is_the_T_imeframe__c</fullName>
        <label>What is the [T]imeframe?</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>What_is_the_V_olume_of_groups_touched__c</fullName>
        <label>What is the [V]olume of groups touched?</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>What_is_the_status_of_the_B_udget__c</fullName>
        <label>What is the status of the [B]udget?</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>What_s_the_compelling_reason_to_buy__c</fullName>
        <label>What&apos;s the compelling reason to buy? [!]</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Where_is_the_O_pposition__c</fullName>
        <label>Where is the [O]pposition?</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <label>VMT Opportunity Account Score</label>
    <nameField>
        <label>VMT Account Score Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>VMT Opportunity Account Scores</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>